--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.1.1
+** new commands 'fdump' and 'frestore'
+These commands are for saving and restoring frame sets.
+
 ** key presses
 All actions now occur after the user has released the key.
 
