*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -24,3 +24,4 @@ Dan Aloni <da-x@gmx.net>
 Tim Goodwin <tjg@star.le.ac.uk>
 Nicklas Lindgren <nili@lysator.liu.se>
 Henrik Enberg <henrik@enberg.org>
+Rupert <rupert.debian@hotpop.com>
