* src/window.c (get_window_list): if window_list_style is STYLE_COLUMN then the end of the mark is the length of the buffer minus the start of the mark.
* src/main.c (init_defaults): init window_list_style to STYLE_ROW.

* src/data.h (struct rp_defaults): new member, window_list_style.

* src/bar.c (bar_y): new argument, height. All callers updated.
(bar_y): use height in calculations.
(update_window_names): print a column of windows if
defaults.window_list_style is in column mode.
(count_lines): new function
(max_line_length): likewise
(pos_in_line): likewise
(line_beginning): likewise
(marked_wrapped_message): likewise

* src/actions.c (user_commands): new commands 'verbexec' and
'defwinliststyle'. Move @end take to after the def* commands.
(cmd_verbexec): new function. Added prototype.
(cmd_defwinliststyle): likewise

--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -515,6 +515,10 @@ Set the default gravity for normal windows. See the
 When called non-interactively with no arguments, the current setting is
 returned.
 
+@item defwinliststyle @var{setting}
+The window list can be displayed in a row or a column. @var{setting}
+can be @samp{row} or @samp{column}.
+
 @item defwinname @var{name}
 There are three resources ratpoison can get a window's name from: the
 WMNAME hint, the res_name from the WMCLASS hint, or the res_class from
@@ -789,6 +793,10 @@ Unbind a keystroke.
 
 @item unsetenv @var{env}
 Clear the value of the environment variable, @var{env}.
+
+@item verbexec @var{command}
+Verbosely exec the shell command @var{command}. Raptoison displays a
+message saying command was executed.
 
 @item version
 Print ratpoison version.  By default, this is bound to @kbd{C-t v}.
