--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.2.0-beta2
+
 * Changes since 1.1.1
 ** new comand 'defwrapwinlist'
 when turned on, the window list is displayed in a column, not a row.
