--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-10  Shawn Betts  <sabetts@sfu.ca>
+
+	* src/events.c (unmap_notify): fix crash bug in NormalState case.
+
 2003-04-09  Shawn Betts  <sabetts@sfu.ca>
 
 	* configure.in (TERM_PROG): Add doc string
