--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2003-04-11  Shawn Betts  <sabetts@sfu.ca>
 
+	* src/manage.c (get_wmname): add a debug line to print the
+	property returned.
+
 	* src/window.c (window_name): use WIN_NAME_* defines for possible
 	defaults.win_name values.
 	(window_name): remove case WIN_NAME_TITLE and glob it with the
