--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 
 	* src/manage.c (get_wmname): add a debug line to print the
 	property returned.
+	(get_wmname): add newline in debug print out.
 
 	* src/window.c (window_name): use WIN_NAME_* defines for possible
 	defaults.win_name values.
