--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* src/manage.c (get_wmname): add a debug line to print the
 	property returned.
 	(get_wmname): add newline in debug print out.
+	(get_wmname): fail if n is 0.
 
 	* src/window.c (window_name): use WIN_NAME_* defines for possible
 	defaults.win_name values.
