--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
+* Changes since 1.2.0-beta3
+** new command line argument --display
+Now you can specify the display to connect to.
+
 * Changes since 1.2.0-beta2
 
 * Changes since 1.1.1
