--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -883,6 +883,10 @@ Display the version
 @item -d, --display
 Specify the X display to connect to.
 
+@item -s, --screen
+Specify the screen to use. By default ratpoison runs on all
+screens. You can tell it to use just one with this option.
+
 @item -c, --command
 Send ratpoison a colon-command. This allows you to control ratpoison
 from the command-line. with the @option{-c} option you can script
