--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.2.0-beta3
+** new command line argumen --screen
+Now you can specify the screen you want to manage. By default
+ratpoison manages all screens on the display.
+
 ** new command line argument --display
 Now you can specify the display to connect to.
 
