*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -13,15 +13,16 @@ manager is the optimal user interface for penbased handheld computers.
 
 Other Contributors:
 
-Gergely Nagy <algernon@debian.org>
-Martin Samuelsson <cosis@lysator.liu.se>
-Jonathan Walther <krooger@debian.org>
-Chr. v. Stuckrad <stucki@math.fu-berlin.de>
-Doug Kearns <djkea2@mugc.its.monash.edu.au>
-Mike Meyer <mwm@mired.org>
 Ben Leslie <benno@sesgroup.net>
+Chr. v. Stuckrad <stucki@math.fu-berlin.de>
 Dan Aloni <da-x@gmx.net>
-Tim Goodwin <tjg@star.le.ac.uk>
-Nicklas Lindgren <nili@lysator.liu.se>
+Doug Kearns <djkea2@mugc.its.monash.edu.au>
+Gergely Nagy <algernon@debian.org>
 Henrik Enberg <henrik@enberg.org>
+Jonathan Walther <krooger@debian.org>
+Martin Samuelsson <cosis@lysator.liu.se>
+Mike Meyer <mwm@mired.org>
+Nicklas Lindgren <nili@lysator.liu.se>
+Pasi Kallinen <pkalli@cs.joensuu.fi>
 Rupert <rupert.debian@hotpop.com>
+Tim Goodwin <tjg@star.le.ac.uk>
