--- a/doc/ratpoison.texi
+++ b/doc/ratpoison.texi
@@ -796,10 +796,10 @@ Remove @var{name} from the list of defined aliases.
 Unbind a keystroke.
 
 @item unmanage @var{text}
-Add @var{text} to the unmanaged window list. Any window that matches
-any of the strings in the unmanaged window list will not be handled in
-any way by ratpoison. This only applies to new windows (not windows
-already managed by ratpoison).
+Add @var{text} to the unmanaged window list. Any window whose name
+matches any of the strings in the unmanaged window list will not be
+handled in any way by ratpoison. This only applies to new windows (not
+windows already managed by ratpoison).
 
 When called non-interactively with no arguments, the list is returned.
 
