--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,13 @@
 ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 1.2.0-beta5
-** command return status
+** shell commands return status
 If a command the user executed (with the exec command) returns with a
 non-zero exit status, the command and exit status are reported in a
 message.
+
+** new commands gnew, gnext, gprev
+Window are now part of groups. There can be more than one group.
 
 * Changes since 1.2.0-beta4
 ** new commands unmanage and clrunmanaged
