--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-17  Shawn Betts  <sabetts@sfu.ca>
+
+	* src/actions.c (spawn): always put the DISPLAY string in the
+	environment.
+
 2003-05-16  Shawn Betts  <sabetts@sfu.ca>
 
 	* src/window.c (add_to_window_list): add the window to the current
